# proto-sam

./: .clang-format  .gitignore  .tmuxp.yaml  CMakeLists.txt  README.md  SVG_groups.md  backend_minisam.py  backend_no_inference.py  bookkeeper.h  config.h  factor.h  factor_test.cpp  front_end.py  graph_publish.py  graph_stub.py  graph_stub2.py  index.html  main.cpp  main.js  main_stdinput.cpp  mainv3_stdinput.cpp  mqtt-cpp-demo.cpp  pipeSAM  sam-system-factor_test.cpp  sam-system.h  sam-systemV3.h  sam-system_test.cpp  sam_system.cpp  sam_system.h  simulation.py  slam_dataviz_manager.py  style.css  test.cpp  test_factor.cpp  topicsmqtt.md  utils.h
core/: bookkeeper.h  config.h  factor.h  factorV3.h  meta.h  sam-system.h  sam-systemV3.h  utils.h
examples/: gt_linA.json  gt_small_rsbA.json  gt_small_rsbB.json  gt_small_rsbMono.json  mes_lin3500.json  mes_linA.json  mes_linAEight.json  mes_linB.json  mes_linBEight.json  mes_linBowtie.json  mes_linButterfly.json  mes_linDoubleFish.json  mes_linDoubleFishIncremental.json  mes_linEight.json  mes_linEmptyClique.json  mes_linFish.json  mes_linFishIncomplete.json  mes_linLittleEight.json  mes_linMono.json  mes_linPaterCross.json  mes_linpapertoy.json  mes_x27cutM3500.json
factor/: CMakeLists.txt
factor/factor/: CMakeLists.txt
factor/factor_impl/: CMakeLists.txt
factor/factor_impl/include/anchor2d/: anchor2d.h
factor/factor_impl/include/anchorSE2/: anchorSE2.h
factor/factor_impl/include/cartesian-landmark-obs-SE2/: cartesian-landmark-obs-SE2.h
factor/factor_impl/include/motion-model-SE2/: motion-model-SE2.h
factor/factor_impl/include/relative-matcher-2d/: relative-matcher-2d.h
factor/factor_impl/include/relative-matcher-SE2/: relative-matcher-SE2.h
factor/factor_impl/src/: anchor2d.cpp  anchorSE2.cpp
factor/factor_interface/: CMakeLists.txt
factor_impl/: anchor.h  anchor.hpp  key-meta-position.h  linear-translation.h  linear-translation.hpp  measure-meta-absolute-position.h  measure-meta-linear-translation.h  range_bearing_factor.h
include/core/: PersistentFactor.h  bookkeeper.h  clique.h  config.h  factor.h  marginal.h  meta.h  sam-system.h  system_jsonify.h
include/factor_impl/: anchor.hpp  anchorSE2.hpp  cartesian-landmark-obs-SE2.hpp  key-meta-SE2.h  key-meta-position.h  key-meta-se2.h  linear-translation.hpp  measure-meta-absolute-pose-SE2.h  measure-meta-absolute-position.h  measure-meta-linear-translation.h  measure-meta-rigid-motion-SE2.h  measure-meta-velocity-SE2.h  motion-model-SE2.hpp  pose-matcher-SE2.hpp
include/utils/: tuple_patterns.h  utils.h
indep/: test.cpp
inference/: CMakeLists.txt
inference/solver/: CMakeLists.txt
inference/solver/matrix_solver/: CMakeLists.txt
inference/solver/matrix_solver/include/solver/: solver.h
inference/solver/matrix_solver/src/: solver.cpp
inference/system/: CMakeLists.txt
inference/system/include/marginal/: marginal.h
inference/system/include/system/: GraphConverter.h  GraphConverter.hpp  HybridConverter.h  MatrixConverter.hpp  PersistentFactor.h  SystemConverter.hpp  clique.h  clique_undirected_tree.h  connected_clique.h  sam-system.h  solver.h  system_jsonify.h
inference/system/src/: GraphConverter.cpp  HybridConverter.cpp  MatrixConverter.cpp
inference/utils/: CMakeLists.txt
inference/utils/include/utils/: config.h  tuple_patterns.h  utils.h
main/: graphmainstdin.cpp  mainstdin.cpp
meta/: CMakeLists.txt
meta/include/measure-motion-2d/: measure-motion-2d.h
meta/include/measure-motion-SE2/: measure-motion-SE2.h
meta/meta/: CMakeLists.txt
meta/meta/include/key-spatial-2d/: key-spatial-2d.h
meta/meta/include/key-spatial-SE2/: key-spatial-SE2.h
meta/meta/include/measure-location-2d/: measure-location-2d.h
meta/meta/include/measure-location-SE2/: measure-location-SE2.h
meta/meta/include/measure-motion-2d/: measure-motion-2d.h
meta/meta/include/measure-motion-SE2/: measure-motion-SE2.h
meta/meta/include/measure-velocity-SE2/: measure-velocity-SE2.h
meta/meta/include/meta/: meta.h
meta/meta/src/: key-spatial-2d.cpp  key-spatial-SE2.cpp  measure-location-2d.cpp  measure-location-SE2.cpp  measure-motion-2d.cpp  measure-motion-SE2.cpp  measure-velocity-SE2.cpp
meta/meta_impl/: CMakeLists.txt
meta/meta_impl/include/key-pose-SE2/: key-pose-SE2.h
meta/meta_impl/include/key-position-2d/: key-position-2d.h  key-spatial-2d.h
meta/meta_impl/include/key-spatial-SE2/: key-spatial-SE2.h
meta/meta_impl/include/measure-location-2d/: measure-location-2d.h
meta/meta_impl/include/measure-location-SE2/: measure-location-SE2.h
meta/meta_impl/include/measure-motion-2d/: measure-motion-2d.h
meta/meta_impl/include/measure-motion-SE2/: measure-motion-SE2.h
meta/meta_impl/include/measure-pose-SE2/: measure-location-SE2.h  measure-pose-SE2.h
meta/meta_impl/include/measure-position-2d/: measure-location-2d.h  measure-position-2d.h
meta/meta_impl/include/measure-velocity-SE2/: measure-velocity-SE2.h
meta/meta_impl/src/: key-pose-SE2.cpp  key-position-2d.cpp  key-spatial-2d.cpp  key-spatial-SE2.cpp  measure-location-2d.cpp  measure-location-SE2.cpp  measure-motion-2d.cpp  measure-motion-SE2.cpp  measure-pose-SE2.cpp  measure-position-2d.cpp
meta/meta_interface/: CMakeLists.txt
meta/meta_interface/include/meta/: meta_interface.h
meta/src/: key-pose-SE2.cpp  measure-pose-SE2.cpp  measure-velocity-SE2.cpp
python_files/: backend_minisam.py  graph_stub.py  graph_stub2.py  gtsam_basic.py  simulation.py
sam-v2/: bookkeeper.h  definitions.h  front_end_node.py  odom_vel_factor.h  sam_slam_back_end_node.cpp  sam_system.cpp  sam_system.h
show/: M3500_full.json  before_marginal_refactor.json  results_linAEight.json  results_linBEight.json  results_linEight.json
system/: CMakeLists.txt
test/: eigen_blas_routine_test.cpp  factorV3_test.cpp  factor_test.cpp  marginal_test.cpp  sam-system-factor_test.cpp  sam-systemV3-factorV3_test.cpp  sam-system_test.cpp  system_fail_test.cpp  test_utils.h  toy_SE2_test.cpp  toy_linear_test.cpp  toy_pose_graph_SE2_test.cpp  toy_slam_SE2.cpp
viz2/: index.html  main2.js  style.css
(+24 files in other folders)
